[CORRECTION] Aligne correctement le header sur les pages d'erreurs

--- a/public/assets/styles/erreur.css
+++ b/public/assets/styles/erreur.css
@@ -25,3 +25,8 @@
   padding: 7px 16px 9px 16px;
   margin: 0;
 }
+
+header {
+  justify-content: space-between;
+  max-width: 1200px;
+}
